# Ciphey

./: .SRCINFO  .all-contributorsrc  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LanguageChecker.py  MANIFEST.in  PKGBUILD  PKGBUILD.proto  README.MD  README.md  changelog.md  ciphey-main.py  ciphey.rb  codecov.yml  core-wordnet.txt  countCode.py  delete.py  dictionary.txt  entry_point.py  entry_point.spec  important.md  intro.yml  license  main.py  mathsHelper.py  newreadme.md  noxfile.py  oldSETUP.PY  path.py  pyproject.toml  readme2.md  requirements.txt  settings.yml  setup.py  snapcraft.yaml  tap_code.py  test.py  (+2 more)
.github/: FUNDING.yml  config.yml  dependabot.yml  lock.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance_suggestion.md
.github/workflows/: .readthedocs.yml  codeql-analysis.yml  coverage  coverage.yml  pythonapp.yml  pythonapponpush.yml  release.yml  releasetestpypi.yml  terminaltest.yml  tests.archive  tests.yml  tests2.yml
Pictures_for_README/: .gitattributes
Tests/: __main__.py  test_caesarcipher_basic.py  test_integration_languagechecker.py
app/: __init__.py  __main__.py  base64.cast  ciphey-main.py  main.py  mathsHelper.py  morse.cast  runTests.py  stuart2.cast  stuart2cipher.cast  test_basicparent.py  test_chi_squared.py  test_dictionary.py  test_integration.py  test_neuralNetwork.py
app/Decryptor/: __init__.py
app/Tests/: testEncoding.py  test_Encoding.py  test_basic_parent.py  test_caesarcipher_basic.py  test_chi_squared.py  test_integration_languagechecker.py  test_neural_network.py  testbasic_parent.py  testcaesarcipher_basic.py  (+5 more)
ciphey/: __init__.py  __main__.py  analysis.py  ciphey.py  common.py  iface.py  mathsHelper.py  test_basicparent.py  test_chi_squared.py  test_dictionary.py  test_encoding.py  test_integration.py  test_neuralNetwork.py
docs/: LanguageChecker.rst  brandon_interface.md  changelog.md  ciphers.rst  ciphey.Decryptor.Encoding.rst  ciphey.Decryptor.Hash.rst  ciphey.Decryptor.basicEncryption.rst  ciphey.Decryptor.rst  ciphey.basemods.Checkers.rst  ciphey.basemods.Crackers.rst  ciphey.basemods.Decoders.rst  ciphey.basemods.Resources.rst  ciphey.basemods.Searchers.rst  ciphey.basemods.rst  ciphey.iface.rst  ciphey.neuralNetworkMod.rst  ciphey.rst  conf.py  config.rst  features.rst  howWork.rst  index.rst  install.md  install.rst  knn.md  languagechecker.md  lc.rst  lc2.rst  main.py  modules.rst  neuralnetwork.md  nn.rst  privacy.rst  reference.rst  requirements.txt  settings.md  settings.rst  whydidntyoudox.md
test/: progress.py  transhacker.py  transoutput.txt  transpositionDecrypt.py
tests/: brandon_interface.md  chi.py  cli.py  dict.py  dictionary.py  enciphey.py  generate_tests.py  hansard.txt.REMOVED.git-id  integration.py  lukas.py  main.py  speed_test.archive  speed_test.py  test_advanced_ciphers.py  test_chi_squared.py  test_click.py  test_click_printing.py  test_encoding.py  test_generator.py  test_integration.py  test_main.py  test_main_generated.py  test_neuralNetwork.py  test_quick.py  test_regex.py
tools/: freq_analysis.py  test_one.py
(+315 files in other folders)
