[tool.poetry]
name = "ciphey"
version = "5.14.1"
description = "Automated Decryption Tool"
authors = ["Brandon <brandon@skerritt.blog>"]
license = "MIT"
documentation = "https://github.com/Ciphey/Ciphey/wiki"
exclude = ["tests/hansard.txt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rich = ">=4,<11"
pyyaml = "^5.3.1"
pylint = "^2.6.0"
flake8 = ">=3.8.4,<5.0.0"
cipheydists = "^0.3.35"
cipheycore = "^0.3.2"
appdirs = "^1.4.4"
typing_inspect = { version = ">=0.6,<0.8", python = "~3.7" }
base58 = "^2.0.1"
base91 = "^1.0.1"
pybase62 = ">=0.4.3,<0.6.0"
click = ">=7.1.2,<9.0.0"
mock = "^4.0.3"
pywhat = "3.0.0"
xortool-ciphey = "^0.1.16"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"
pytest = "^6.2.1"
black = "^21.4b2"
neovim = "^0.3.1"
codecov = "^2.1.11"
sphinx = "^4.0.0"
sphinx-autodoc-typehints = "^1.11.1"
nltk = "^3.5"

[tool.poetry.scripts]
ciphey = 'ciphey.ciphey:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


